--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ Anime-
     <center><a class="lic" href="LICENSE.txt">View_License</a></center>
     <div id="txt"></div>
          <br>
-       </body>
+      <div class="fixed-bottom">Last updated by PostBot 4hrs ago</div>
  
     </body>
   </html>
