--- a/index.html
+++ b/index.html
@@ -254,7 +254,11 @@ Anime-
     <center><a class="lic" href="LICENSE.txt">View_License</a></center>
     <div id="txt"></div>
          <br>
-       <div class="fixed-bottom"><h5>Last updated by PostBot 4hrs ago</h5></div>
+       <center<div class="fixed-bottom">
+       <div class="alert alert-primary" role="alert">
+ Last updated 4 hours ago by postbot
+</div>
+       </div></center>
  
     </body>
   </html>
