--- a/index.html
+++ b/index.html
@@ -254,11 +254,11 @@ Anime-
     <center><a class="lic" href="LICENSE.txt">View_License</a></center>
     <div id="txt"></div>
          <br>
-       <center<div class="fixed-bottom">
+       <center><div class="sticky-bottom">
        <div class="alert alert-primary" role="alert">
  Last updated 4 hours ago by postbot
 </div>
-       </div></center>
+       </div></div></center>
  
     </body>
   </html>
