--- a/index.html
+++ b/index.html
@@ -2,8 +2,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0J4EYT1T3Y"></script>
 <script>
+  let apiKey = 'b7821536339546be964e8315599aaac8';
+$.getJSON('https://ipgeolocation.abstractapi.com/v1/?api_key=' + apiKey, function(data) {
+  console.log(JSON.stringify(data, null, 2));
+});
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
