--- a/under.html
+++ b/under.html
@@ -11,7 +11,7 @@
     <code><h9></h9></code>
     <code><h4>Server error</h4></code>
 	  <button onclick="myFunction()">Go Back</button>
-	  <p id="fig-"></p>
+	  <code><p id="fig-"></p></code>
     <script>
 	     let apiKey = 'b7821536339546be964e8315599aaac8';
 $.getJSON('https://ipgeolocation.abstractapi.com/v1/?api_key=' + apiKey, function(data) {
