--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@ Anime-
     <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
         <a href="under.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTWW4wvzwA9V0xdjG-kF_yXQH__lV5ciORmTPCi4iO6OzxzhJi" alt="Flowers in Chania"></a>
     <br>
-    <center><a class="lic" href="LICENSE.txt">View_License</a></center>
-    <div id="txt"></div>
+  
+    
          <br>
        <center><div class="sticky-bottom">
        <div class="alert alert-primary" role="alert">
- Last updated 4 hours ago by postbot
+End!
 </div>
        </div></div></center>
- 
+ <div id="txt"></div>
     </body>
   </html>
