--- a/Allofus.html
+++ b/Allofus.html
@@ -16,10 +16,16 @@
   box-sizing: border-box;
   margin: 0;
 }
-
-html, body {
+html {
   margin: 0;
   background: white;
+  font-family: "Montserrat", helvetica, arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+}
+    body {
+  margin: 0;
+ background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
   font-family: "Montserrat", helvetica, arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
