--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
          @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
            body {
                            font-family: 'Poppins', sans-serif;
+             background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
          }
                    .demo  {
   width: 180px;
