--- a/under.html
+++ b/under.html
@@ -67,7 +67,7 @@ function showPosition(position) {
         let tID = setTimeout(function () {
 
 			// redirect page.
-            window.location.href = 'https://www.encodedna.com/javascript/operators/default.htm';
+            window.location.href = 'https://shujaat09.github.io/movies.github.io/';
             
             window.clearTimeout(tID);		// clear time out.
             
