--- a/Sher.html
+++ b/Sher.html
@@ -3,6 +3,10 @@
 <head>
   <title>SherShaah</title>
   <link rel="icon" type="image/x-icon" href="netflix.jpg">
+  <meta charset="UTF-8">
+  <meta name="description" content="Shershaah">
+  <meta name="keywords" content="prime vi">
+  <meta name="author" content="Suhyeokk">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -26,6 +30,15 @@ img {
   </style>
   <img src="Sher.png" alt="Paris">
   <br><br>
+  <div class="card text-bg-dark">
+  <img src="..." class="card-img" alt="...">
+  <div class="card-img-overlay">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+  </div>
+</div>
   <a href="https://drive.google.com/file/d/1DFb4nveF46K1ovHrQn2USG_BhKCsisxY/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
+  <h5>May misbehav cause under repairment</h5>
 </body>
 </html>
