--- a/Sher.html
+++ b/Sher.html
@@ -30,15 +30,9 @@ img {
   </style>
   <img src="Sher.png" alt="Paris">
   <br><br>
-  <div class="card text-bg-dark">
-  <img src="..." class="card-img" alt="...">
-  <div class="card-img-overlay">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-    <p class="card-text"><small>Last updated 3 mins ago</small></p>
-  </div>
-</div>
+
   <a href="https://drive.google.com/file/d/1DFb4nveF46K1ovHrQn2USG_BhKCsisxY/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
-  <h5>May misbehav cause under repairment</h5>
+  <h5>May misbehave cause under repairment</h5>
+  <p>Under Spidy</p>
 </body>
 </html>
