--- a/Sher.html
+++ b/Sher.html
@@ -27,7 +27,12 @@ img {
   margin-left: auto;
   margin-right: auto;
   }
+  .main-src {
+    height: auto;
+    width: auto;
+  }
   </style>
+  <iframe class="main-src"src="https://drive.google.com/file/d/1DFb4nveF46K1ovHrQn2USG_BhKCsisxY/preview" allowfullscreen allow="autoplay"></iframe>
   <img src="Sher.png" alt="Paris">
   <br><br>
 
