--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ All-
        <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
    
       <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
-     <a href="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
+     <a href="Sher.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
   <a href="under.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTWW4wvzwA9V0xdjG-kF_yXQH__lV5ciORmTPCi4iO6OzxzhJi" alt="Flowers in Chania"></a>
     
@@ -218,7 +218,7 @@ Korean-
 Indian-
 </div>
 <br>
-    <a href="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X"><img  class="demo" src="Sher.png" alt="Flowers in Chania"></a>
+    <a href="Sher.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X" alt="Flowers in Chania"></a>
   
     
   
