--- a/Sher.html
+++ b/Sher.html
@@ -8,35 +8,28 @@
   <meta name="keywords" content="prime vi">
   <meta name="author" content="Suhyeokk">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
+ 
 </head>
 <body>
     </head>
 <style>
-img {
-  width: 140px;
-  height: 240px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
+  body {
+    background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
+  }
+
   .btn btn-primary {
          display: block;
   margin-left: auto;
   margin-right: auto;
   }
   .main-src {
-    height: auto;
-    width: auto;
+    width: 640;
+    height: 480;
   }
   </style>
   <iframe class="main-src"src="https://drive.google.com/file/d/1DFb4nveF46K1ovHrQn2USG_BhKCsisxY/preview" allowfullscreen allow="autoplay"></iframe>
-  <img src="Sher.png" alt="Paris">
+  
   <br><br>
-
-  <a href="https://drive.google.com/file/d/1DFb4nveF46K1ovHrQn2USG_BhKCsisxY/view"><button type="button" class="btn btn-primary">Watch Now</button></a>
   <h5>May misbehave cause under repairment</h5>
   <p>Under Spidy</p>
 </body>
