--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
  
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-0J4EYT1T3Y"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#e20000">
+    <link rel="apple-touch-icon" sizes="180x180" href="movies.github.io/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="movies.github.io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="movies.github.io/favicon-16x16.png">
+<link rel="manifest" href="movies.github.io/site.webmanifest">
+<link rel="mask-icon" href="movies.github.io/safari-pinned-tab.svg" color="#e20000">
 <meta name="msapplication-TileColor" content="#b91d47">
 <meta name="theme-color" content="#ffffff">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
