--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!-- Halfmoon JS -->
 <script src="path/to/halfmoon.min.js"></script>
     </head>
-  <script id="help-ukraine-win" async="true" src="https://helpukrainewinwidget.org/cdn/widget.js?type=one&position=top-right&layout=main"></script>    
+ <script id="help-ukraine-win" async="true" src="https://helpukrainewinwidget.org/cdn/widget.js?type=one&position=bottom-right&layout=main"></script>
      <style>
          
          @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
