--- a/index.html
+++ b/index.html
@@ -200,12 +200,8 @@ All-
      <a href="Un.html"><img  class="demo" src="Un.png" alt="Flowers in Chania"></a>
    <a href="crash.html"><img class="demo"  src="https://m.media-amazon.com/images/M/MV5BMzRiZWUyN2YtNDI4YS00NTg2LTg0OTgtMGI2ZjU4ODQ4Yjk3XkEyXkFqcGdeQXVyNTI5NjIyMw@@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
     <a href="Squid.html"><img  class="demo" src="Squid.png" alt="Flowers in Chania"></a>
-    <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a> 
-   <a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a>
-       <a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a>
-   
-      <a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
-     <a href="Sher.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X" alt="Flowers in Chania"></a>
+    <a href="Train.html"><img  class="demo" src="Train.png" alt="Flowers in Chania"></a><a href="Bus.html"><img  class="demo" src="Bus.png" alt="Flowers in Chania"></a><a href="Fire.html"><img  class="demo" src="Fire.png" alt="Flowers in Chania"></a><a href="Purple.html"><img  class="demo" src="Purple.png" alt="Flowers in Chania"></a>
+     <a href="012.htm"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
   <a href="under.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTWW4wvzwA9V0xdjG-kF_yXQH__lV5ciORmTPCi4iO6OzxzhJi" alt="Flowers in Chania"></a>
     
