--- a/012.htm
+++ b/012.htm
@@ -28,7 +28,7 @@
     height: 480;
   }
   </style>
-   <h2 align="center">SherShaah</h2>
+   <h2 color="#fff" align="center">SherShaah</h2>
   <br>
   <br>
   <br>
