--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
            #Allof {
              visibility: none;
            }
+          #xt {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px;
+          }
   </style>
  
  <script>
@@ -181,7 +184,7 @@ function checkTime(i) {
   Enable Desktop view ****
 </div>
     <br><br>
-    <center><a href="Search.html"><button id="xt"type="button" class="btn btn-dark">Search</button></a></center><br><br>
+    <center><a href="Search.html"><button id="xt" type="button" class="btn btn-light">Search</button></a></center><br><br>
  <br>
    <div class="alert alert-dark" role="alert">
 All-
