--- a/Search.html
+++ b/Search.html
@@ -80,6 +80,7 @@ body{
     <li><a href="Conj.html">The Conjuring</a></li>
     <li><a href="pachinko.html">Pachinko</a></li>
     <li><a href="under.html">Attack on titans</a></li>
+    <li><a href="under.html">Stranger-Things</a></li>
   </ul>
   
  
