--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ function checkTime(i) {
 All-
 </div>
     <br>
-      <a href="under.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
+      <a href="stranger.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
     <a href="pachinko.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
      <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
     <a id="Allof" href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
