--- a/012.htm
+++ b/012.htm
@@ -14,21 +14,12 @@
     </head>
 <style>
   body {
-    background-color: #000;
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; font-color: white; } p { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px;
-  }
+         margin: 0;
+     background-image: linear-gradient( 174.2deg,  rgba(255,244,228,1) 7.1%, rgba(240,246,238,1) 67.4% );
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } 
 
-  .btn btn-primary {
-         display: block;
-  margin-left: auto;
-  margin-right: auto;
-  }
-  .main-src {
-    width: 640;
-    height: 480;
-  }
   </style>
-   <h2 color="#fff" align="center">SherShaah</h2>
+   <h2 align="center">SherShaah</h2>
   <br>
   <br>
   <br>
