--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ function checkTime(i) {
   Enable Desktop view ****
 </div>
     <br><br>
-    <center><a href="Search.html"><button id="xt" type="button" class="btn btn-light">Search</button></a></center><br><br>
+    <center><a href="Search.html"><button type="button" class="btn btn-light">Search</button></a></center><br><br>
  <br>
    <div class="alert alert-dark" role="alert">
 All-
