--- a/stranger.html
+++ b/stranger.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <br><br>
-   <a href="under.html"><button type="button" class="btn btn-light">Season-1</button></a>
+   <a href="strangerthingss1.html"><button type="button" class="btn btn-light">Season-1</button></a>
 
 </body>
 </html>
