--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@ function checkTime(i) {
       <img src="netflix.jpg" alt="" width="30" height="24" class="d-inline-block align-text-top">
       Netflix-Kr
     </a>
+   <li class="nav-item">
+          <a class="nav-link" href="#">View</a>
+        </li>
   </div>
       
 </nav><br><br>
