--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ All-
      <a href="https://gotos.in/you+have+to+write+a+really+really+long+url+to+get+to+650+characters.+like+seriously+you+have+no+idea+how+long+it+has+to+be+650+characters+is+absolutely+freaking+enormous.+You+can+fit+sooooooooooooooooooooooooooooooooo+much+data+into+650+characters.+My+hands+are+getting+tired+typing+this+many+characters.+I+didnt+even+realise+how+long+it+was+going+to+take+to+type+them+all.+So+many+characters.+I'm+bored+now+so+I'll+just+copy+and+paste.+I'm+bored+now+so+I'll+just+copy+and+paste+J3i+.I'm+bored+now+so+I'll+just+copy+and+paste.I'm+bored+now+so+I'll+just+copy+and+paste.I'm+bored+now+so+I'll+just+copy+and+paste.+It+has+to+be+freaking+enormously+freaking+enormous" alt="Flowers in Chania">><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTyFPZ0pCOPFdiXT-rbvi-Za2LxoqSWEt3zxnAtPgfcGcAjDY9X" alt="Flowers in Chania"></a>
      <a href="Look.html"><img  class="demo" src="Look.png" alt="Flowers in Chania"></a>
   <a href="under.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSTWW4wvzwA9V0xdjG-kF_yXQH__lV5ciORmTPCi4iO6OzxzhJi" alt="Flowers in Chania"></a>
-    
+     <a href="endoftheroad.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTsaa6sN3mqZCxbhJP5KPARDlBrwGUPckSilCTkzjKMFsphJgc4" alt="Flowers in Chania"></a>
      <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
 
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
@@ -266,7 +266,8 @@ American/Britian/Spain-
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
     <a href="Conj.html"><img  class="demo" src="Conj.png" alt="Flowers in Chania"></a>
-         <a href="stranger.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
+        <a href="endoftheroad.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTsaa6sN3mqZCxbhJP5KPARDlBrwGUPckSilCTkzjKMFsphJgc4" alt="Flowers in Chania"></a>
+      <a href="stranger.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
       <br>
 <div class="alert alert-dark" role="alert">
 Anime-
