--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ function checkTime(i) {
     <br><br>
     <center><a href="Search.html"><button type="button" class="btn btn-light">Search</button></a></center><br><br>
  <br>
- <h5>28</h5>
+ <h5 align="right">28</h5>
  <br>
    <div class="alert alert-dark" role="alert">
 All-
