--- a/index.html
+++ b/index.html
@@ -189,10 +189,9 @@ function checkTime(i) {
     <br><br>
     <center><a href="Search.html"><button type="button" class="btn btn-light">Search</button></a></center><br><br>
  <br>
- <h5 align="right">28</h5>
  <br>
    <div class="alert alert-dark" role="alert">
-All-
+All-(28)
 </div>
     <br>
       <a href="stranger.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
