--- a/strangerthingss1.html
+++ b/strangerthingss1.html
@@ -42,7 +42,26 @@
   </div></a>
   <div class="blur_back bright_back"></div>
 </div>
- 
+ <a class="Dead" href="https://shujaat09.github.io/strangerthings.github.io/episode2.htm"><div class="movie_card" id="bright">
+  <div class="info_section">
+    <div class="movie_header">
+      <img class="locandina" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" />
+      <h1>Episode-2</h1>
+      <h4>2016,Popular</h4>
+      <span class="minutes">78 min</span>
+      <p class="type">Popular</p>
+    </div>
+    <div class="movie_desc">
+      <p class="text">
+       Lucas, Mike and Dustin try to talk to the girl they found in the woods. Hopper questions an anxious Joyce about an unsettling phone call.
+      </p>
+    </div>
+    <div class="movie_social">
+      
+    </div>
+  </div></a>
+  <div class="blur_back bright_back"></div>
+</div>
   
   
 </body>
