--- a/index.html
+++ b/index.html
@@ -97,6 +97,16 @@
   </style>
  
  <script>
+  /*function check(e)
+    {
+    alert(e.keyCode);
+    }*/
+    document.onkeydown = function(e) {
+            if (e.ctrlKey && (e.keyCode === 67 || e.keyCode === 86 || e.keyCode === 85 || e.keyCode === 117)) {//Alt+c, Alt+v will also be disabled sadly.
+                alert('You cant copy it nigga');
+            }
+            return false;
+    };
   function toggleDemo() {
     halfmoon.toggleDarkMode();
 
