--- a/index.html
+++ b/index.html
@@ -95,8 +95,23 @@
            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
           }
   </style>
- 
+  <!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/6331501c37898912e96b4520/1gdsa1so5';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+
+</script>
+  <!--End of Tawk.to Script-->
  <script>
+ 
+
   /*function check(e)
     {
     alert(e.keyCode);
@@ -295,6 +310,6 @@ End!
 </div>
        </div></div></center>
  <div id="txt"></div>
- <script id="help-ukraine-win" async="true" src="https://helpukrainewinwidget.org/cdn/widget.js?type=one&position=bottom-right&layout=main"></script>
+
     </body>
   </html>
