--- a/index.html
+++ b/index.html
@@ -245,9 +245,14 @@ All-(28)
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     
       <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
-    <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
-    <a href="Conj.html"><img  class="demo" src="Conj.png" alt="Flowers in Chania"></a>
+ <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
  
+ <a href="Conj.html"><div class="card" style="width: 18rem;">
+  <img src="Conj.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">The Conjuring 3</p>
+  </div>
+  </div></a>
  
     <br>
   <div class="alert alert-dark" role="alert">
