--- a/index.html
+++ b/index.html
@@ -245,7 +245,18 @@ All-(28)
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
     
       <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
- <a href="peaky.html"><img  class="demo" src="peakyblinders.png" alt="Flowers in Chania"></a>
+  <img src="Nauto.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Naruto</p>
+  </div>
+  </div></a>
+ 
+ <a href="peaky.html"><div class="card" style="width: 18rem;">
+  <img src="peakyblinders.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <p class="card-text">Peaky Blinders</p>
+  </div>
+  </div></a>
  
  <a href="Conj.html"><div class="card" style="width: 18rem;">
   <img src="Conj.png" class="card-img-top" alt="...">
