--- a/index.html
+++ b/index.html
@@ -243,27 +243,27 @@ All-(28)
      <a href="Day.html"><img  class="demo" src="Day.png" alt="Flowers in Chania"></a>
 
     <a href="The.html"><img  class="demo" src="The.png" alt="Flowers in Chania"></a>
-    
-      <a href="Naruto.html"><img  class="demo" src="Naruto.png" alt="Flowers in Chania"></a>
-  <img src="Nauto.png" class="card-img-top" alt="...">
+   <center><a href="Naruto.html"><div class="card" style="width: 18rem;">
+  <img src="Naruto.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <p class="card-text">Naruto</p>
+    <p class="card-text">Peaky Blinders</p>
   </div>
-  </div></a>
- 
- <a href="peaky.html"><div class="card" style="width: 18rem;">
+    </div></a> </center>
+    
+ <br>
+ <center><a href="peaky.html"><div class="card" style="width: 18rem;">
   <img src="peakyblinders.png" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">Peaky Blinders</p>
   </div>
-  </div></a>
- 
- <a href="Conj.html"><div class="card" style="width: 18rem;">
+  </div></a></center>
+ <br>
+ <center><a href="Conj.html"><div class="card" style="width: 18rem;">
   <img src="Conj.png" class="card-img-top" alt="...">
   <div class="card-body">
     <p class="card-text">The Conjuring 3</p>
   </div>
-  </div></a>
+  </div></a></center>
  
     <br>
   <div class="alert alert-dark" role="alert">
