--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ function checkTime(i) {
     </a>
    
           <a class="nav-link" href="#">View</a>
-      
+      <i class="bi bi-moon-stars-fill"></i>
   </div>
       
 </nav><br><br>
