--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
         .nav-link {
            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
           }
-      .dark-mode {
-  background-color: black;
-  color: white;
-}
+     .bg-img {
+      background-image: url('https://i.ytimg.com/vi/aDKtrnCWFX4/maxresdefault.jpg');
+      }
   </style>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -372,6 +371,6 @@ End!
 </div>
        </div></div></center>
  <div id="txt"></div>
-
+ <div class="bg-img"></div>
     </body>
   </html>
