--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           }
      .bg-img {
       background-image: url('https://i.ytimg.com/vi/aDKtrnCWFX4/maxresdefault.jpg');
+      width: 100%;
+      height:400px;
       }
   </style>
   <!--Start of Tawk.to Script-->
