--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
      .bg-img {
       background-image: url('https://i.ytimg.com/vi/aDKtrnCWFX4/maxresdefault.jpg');
       width: 100%;
-      height:400px;
+      height:900px;
+      background-repeat: no-repeat;
       }
   </style>
   <!--Start of Tawk.to Script-->
