--- a/index.html
+++ b/index.html
@@ -95,10 +95,14 @@
            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; }
           }
      .bg-img {
+      display: block;
+      margin: auto;
       background-image: url('https://i.ytimg.com/vi/aDKtrnCWFX4/maxresdefault.jpg');
+      border-radius: 5px 5px 5px 5px;
       width: 100%;
       height:900px;
       background-repeat: no-repeat;
+      
       }
   </style>
   <!--Start of Tawk.to Script-->
