--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
       width: 100%;
       
       }
+      footer {
+  background-color: #2d2d30;
+  color: #f5f5f5;
+  padding: 32px;
+}
+footer a {
+  color: #f5f5f5;
+}
+footer a:hover {
+  color: #777;
+  text-decoration: none;
+}
   </style>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
@@ -376,6 +388,9 @@ End!
 </div>
        </div></div></center>
  <div id="txt"></div>
- <div class="bg-img"></div>
+<footer class="text-center">
+  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="To-Top">
+    <span class="glyphicon glyphicon-chevron-up"></span></a><br><br>
+  <p>Made by<a href="null" data-toggle="tooltip" title="Shujaat">Shujaat/a></p></footer>
     </body>
   </html>
