--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
 <body>
   <style>
     body {
-      background-color: black;
+     
     }
     img {
-      width: 100px;
-      height: 50px;
     }
   </style>
-   
+   <img src="https://www.vpngate.net/images/flags/KR.png" align="right">
 </body>
 </html>
