--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     img {
     }
   </style>
-   <img src="https://www.vpngate.net/images/flags/KR.png" align="right">
+  <div> <img src="https://www.vpngate.net/images/flags/KR.png" align="right">
+    <strong>방문 페이지 align="center"</strong></div>
 </body>
 </html>
