--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     body {
      
     }
-    img {
+    #hero {
+      text-align: center;
     }
   </style>
   <div> <img src="https://www.vpngate.net/images/flags/KR.png" align="right">
-    <strong>방문 페이지 align="center"</strong></div>
+    <strong><p id"hero">방문 페이지 <p></strong></div>
 </body>
 </html>
