--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     }
   </style>
   <div> <img src="https://www.vpngate.net/images/flags/KR.png" align="right">
-    <strong><p id"hero">방문 페이지 <p></strong></div>
+    <center> <strong><p id"hero">방문 페이지 <p></strong></div></center>
+
 </body>
 </html>
