--- a/Oindex.html
+++ b/Oindex.html
@@ -243,13 +243,13 @@ function checkTime(i) {
 All-(28)
 </div>
     <br>
-      <a href="stranger.html"><img class="demo"  src="https://images-na.ssl-images-amazon.com/images/M/MV5BMjEzMDAxOTUyMV5BMl5BanBnXkFtZTgwNzAxMzYzOTE@._V1_.jpg" alt="Flowers in Chania"></a>
-    <a href="pachinko.html"><img class="demo"  src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcRTewFNUY_NxKtyaR00O0KISuVjlYka79kVc_JbWjGdYV66nuJr" alt="Flowers in Chania"></a>
-     <a href="Lookatme.html"><img class="demo"  src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcTw22AS5z4oREaoIz_wunpVCjZejn8wxso92reSC1RkZUgzAsMg" alt="Flowers in Chania"></a>
-    <a id="Allof" href="Allofus.html"><img class="demo"  src="Dead.jpeg" alt="Flowers in Chania"></a>
+      <a href="stranger.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/sqtX2dwhcFgJozhs1Xmkzi0WbVe.jpg" alt="Flowers in Chania"></a>
+    <a href="pachinko.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/o79UZO7BpZTKVBfUozzpa5C3g6Z.jpg" alt="Flowers in Chania"></a>
+     <a href="Lookatme.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/3BUCbEMFdizaBrNbH6lEfDdNtku.jpg" alt="Flowers in Chania"></a>
+    <a id="Allof" href="Allofus.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/u7qKbq4atqxPWycpWqdDeXlaK1n.jpg" alt="Flowers in Chania"></a>
  
-      <a href="hotel.html"><img  class="demo" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSBPzapGGktvQtObSwrqFsarOC9_ZWISZFhUnen8FZBBu-s4Hvu" alt="Flowers in Chania"></a>
-  <a href="revenge.html"><img  class="demo" src="https://m.media-amazon.com/images/M/MV5BN2U4Yzg0ZTctYTMzMS00M2YwLTkxZDAtMzYwM2I0YTY2M2Q2XkEyXkFqcGdeQXVyMzE4MDkyNTA@._V1_FMjpg_UX1000_.jpg" alt="Flowers in Chania"></a>
+      <a href="hotel.html"><img  class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/wBI4k86KGcIfo5pkMA92LifCLEo.jpg" alt="Flowers in Chania"></a>
+  <a href="revenge.html"><img  class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/uK67v54p1XTXQzg1LYcdYnK3yhC.jpg" alt="Flowers in Chania"></a>
 <a href="alice.html"><img  class="demo" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7bNhpTIID9flag4wQK78f4TG_RGOrPrjlYGAPZeFqJhgn5g5j" alt="Flowers in Chania"></a>
      <a href="Money.html"><img  class="demo" src="Money.png" alt="Flowers in Chania"></a>
     <a href="Moneykr.html"><img  class="demo" src="moneykr.png" alt="Flowers in Chania"></a>
