--- a/Oindex.html
+++ b/Oindex.html
@@ -175,7 +175,7 @@ function checkTime(i) {
     <a href="pachinko.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/o79UZO7BpZTKVBfUozzpa5C3g6Z.jpg" alt="Flowers in Chania"></a>
      <a href="Lookatme.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/3BUCbEMFdizaBrNbH6lEfDdNtku.jpg" alt="Flowers in Chania"></a>
     <a id="Allof" href="Allofus.html"><img class="demo"  src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/u7qKbq4atqxPWycpWqdDeXlaK1n.jpg" alt="Flowers in Chania"></a>
- 
+ <strong>Checkpoint</strong>
       <a href="hotel.html"><img  class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/wBI4k86KGcIfo5pkMA92LifCLEo.jpg" alt="Flowers in Chania"></a>
   <a href="revenge.html"><img  class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/uK67v54p1XTXQzg1LYcdYnK3yhC.jpg" alt="Flowers in Chania"></a>
 <a href="alice.html"><img  class="demo" src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/l2wN0TqNuUbIBW5HNr7nnSPtFXP.jpg" alt="Flowers in Chania"></a>
