--- a/Oindex.html
+++ b/Oindex.html
@@ -27,6 +27,7 @@ body {  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 
   height: 330px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
+  cursor: text;
                      
                         }
        </style>
