--- a/Oindex.html
+++ b/Oindex.html
@@ -23,11 +23,11 @@ body {  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 
          }
              
                    .demo  {
-  width: 180px;
-  height: 330px;
+  width: 90px;
+  height: 110px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 25px;
-  cursor: text;
+  cursor: no-drop;
                      
                         }
        </style>
