--- a/Allofus.html
+++ b/Allofus.html
@@ -203,8 +203,20 @@ html {
     .Dead {
       text-decoration: none;
     }
+    /*new css*/
+    banner-img {
+      width:100%;
+    }
+    banner {
+      width: 100%;
+     height: 900px;
+      
+    }
   </style>
   <body>
+    <div class="banner">
+      <img class="banner-img src="https://www.themoviedb.org/t/p/original/m9Ta1jQNyrRGBTMP2D4ixwCIGb7.jpg" alt="banner"/>
+    </div>
    
 <a class="Dead" href="https://shujaat09.github.io/allofus.github.io/episode1AllOfUs.html"><div class="movie_card" id="bright">
   <div class="info_section">
