--- a/new.htm
+++ b/new.htm
@@ -12,7 +12,7 @@
   </header>
 <main id="main">
   <div class="movie">
-    <img src="#" alt="">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/738vdQ3diENL2NJ7XvST6kMd6D7.jpg" alt="">
       <div class="movie-info"> 
         <h3>Movie Title</h3>
         <span class="green">9.8</span>
@@ -23,7 +23,7 @@
   </div>
   
     <div class="movie">
-    <img src="#" alt="">
+    <img src="https://www.themoviedb.org/t/p/w600_and_h900_bestv2/1mX645VU2Nav1ybLdQsWqL427GK.jpg" alt="">
       <div class="movie-info"> 
         <h3>Movie Title</h3>
         <span class="green">9.8</span>
