--- a/new.htm
+++ b/new.htm
@@ -5,6 +5,20 @@
   <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
 </head>
 <body>
+  <style>
+    * {
+      box-sizing: border-box;
+    }
+    body {
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      overflow: hidden;
+    }
+  </style>
         <header>
           <form id="form"></form>
             <input type="text" placeholder="Search" id="search" class="search">
