--- a/new.htm
+++ b/new.htm
@@ -9,14 +9,14 @@
     * {
       box-sizing: border-box;
     }
+    :root {
+      --primary-color: #22254b;
+      --secondary-color: #373b69;
+      
+    }
     body {
+      background-color: var(--primary-color);
       margin: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      overflow: hidden;
     }
   </style>
         <header>
