--- a/new.htm
+++ b/new.htm
@@ -18,6 +18,12 @@
       background-color: var(--primary-color);
       margin: 0;
     }
+    header {
+      padding: 1rem;
+      display: flex;
+      justify-content: flex-end;
+      background-color: var(--secondary-color);
+    }
   </style>
         <header>
           <form id="form"></form>
