--- a/new.htm
+++ b/new.htm
@@ -24,6 +24,17 @@
       justify-content: flex-end;
       background-color: var(--secondary-color);
     }
+    .search {
+      background-color: transparent;
+      border: 2px solid var(--primary-color);
+      padding: 0.5rem 1rem;
+      border-radius: 50px;
+      font-size: 1rem;
+      color: #fff;
+      font-family: inherit;
+      
+      
+    }
   </style>
         <header>
           <form id="form"></form>
