--- a/new.htm
+++ b/new.htm
@@ -52,10 +52,15 @@
       border-radius: 3px;
       box-shadow: 0.2px 4px 5px rgba(0,0,0,0.1);
       background-color: var(--secondary-color);
-      
+      position: relative;
+      overflow: hidden;
     }
     .movie img{
       width: 100%;
+    }
+    .movie-info {
+      color: #eee;
+      display: flex;
       
     }
   </style>
