--- a/new.htm
+++ b/new.htm
@@ -132,7 +132,16 @@
   </div>
   </main>
   <script>
-    
+    //TMDB 
+    const API_KEY = 'api_key=baeeda532eece053e2763287f8a35741';
+    const BASE_URL = 'https://api.themoviedb.org/3';
+    const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
+    getMovies(API_URL);
+    function getMovies(url) {
+      fetch(url).then(res => res.json).then(data => 
+                                            console.log(data)
+                                            })
+    }
   </script>
 </body>
 </html>
