--- a/new.htm
+++ b/new.htm
@@ -138,7 +138,7 @@
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     getMovies(API_URL);
     function getMovies(url) {
-      fetch(url).then(res => res.json()).then(data => 
+      fetch(url).then(res => res.json()).then(data => {
                                             console.log(data);
                                             })
     }
