--- a/new.htm
+++ b/new.htm
@@ -136,11 +136,30 @@
     const API_KEY = 'api_key=baeeda532eece053e2763287f8a35741';
     const BASE_URL = 'https://api.themoviedb.org/3';
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
+    const IMG_URL = 'https://image.tmdb.org/t/p/w500';
     getMovies(API_URL);
     function getMovies(url) {
       fetch(url).then(res => res.json()).then(data => {
-                                            console.log(data);
+        console.log(data.results);
+                                            showMovies(data.results);
                                             })
+    }
+    function showMovies(data) {
+      data.forEach(movie => {
+        const movieEl = document.createElement('div');
+        movieEl.classList.add('movie');
+        movieEl.innerHTML = `
+          <img src="" alt="">
+      <div class="movie-info"> 
+        <h3>Movie Title</h3>
+        <span class="green">9.8</span>
+    </div>
+    <div class="overview">
+      <h3>Overview</h3>
+      lorem ipsum dolor sat...
+    </div>
+        `
+      })
     }
   </script>
 </body>
