--- a/new.htm
+++ b/new.htm
@@ -137,6 +137,7 @@
     const BASE_URL = 'https://api.themoviedb.org/3';
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     const IMG_URL = 'https://image.tmdb.org/t/p/w500';
+    const main = document.getElementById('main');
     getMovies(API_URL);
     function getMovies(url) {
       fetch(url).then(res => res.json()).then(data => {
@@ -145,21 +146,34 @@
                                             })
     }
     function showMovies(data) {
+      main.innerHTML = '';
       data.forEach(movie => {
+        const {title, poster_path, vote_average, overview} = movie;
         const movieEl = document.createElement('div');
         movieEl.classList.add('movie');
         movieEl.innerHTML = `
-          <img src="" alt="">
+          <img src="${IMG_URL+poster_path}" alt="${title}">
       <div class="movie-info"> 
-        <h3>Movie Title</h3>
-        <span class="green">9.8</span>
+        <h3>${title}</h3>
+        <span class="${getColor(vote_average)}">${vote_average}</span>
     </div>
     <div class="overview">
       <h3>Overview</h3>
-      lorem ipsum dolor sat...
-    </div>
+      ${overview}
+   </div>
         `
+        
+        main.appendChild(movieEl);
       })
+    }
+    function getColor(vote) {
+      if(vote >= 8) {
+        return 'green'
+      }else if(vote >= 5){
+        return 'orange'
+      }else {
+        return 'red'
+      }
     }
   </script>
 </body>
