--- a/new.htm
+++ b/new.htm
@@ -138,6 +138,8 @@
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     const IMG_URL = 'https://image.tmdb.org/t/p/w500';
     const main = document.getElementById('main');
+    const form = document.getElementById('form');
+    const search = document.getElementById('search');
     getMovies(API_URL);
     function getMovies(url) {
       fetch(url).then(res => res.json()).then(data => {
