--- a/new.htm
+++ b/new.htm
@@ -137,6 +137,7 @@
     const BASE_URL = 'https://api.themoviedb.org/3';
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     const IMG_URL = 'https://image.tmdb.org/t/p/w500';
+    const searchURL = BASE_URL + '/search/movie?' + API_KEY;
     const main = document.getElementById('main');
     const form = document.getElementById('form');
     const search = document.getElementById('search');
@@ -177,6 +178,13 @@
         return 'red'
       }
     }
+    form.addEventListener('submit' , (e) => {
+              e.preventDefault();
+      const searchTerm = search.value;
+      if(searchTerm) {
+        getMovies(searchURL+'&query='+searchTerm)
+      }
+    })
   </script>
 </body>
 </html>
