--- a/new.htm
+++ b/new.htm
@@ -183,6 +183,8 @@
       const searchTerm = search.value;
       if(searchTerm) {
         getMovies(searchURL+'&query='+searchTerm)
+      }else{
+        getMovies(API_URL);
       }
     })
   </script>
