--- a/new.htm
+++ b/new.htm
@@ -137,7 +137,7 @@
     const BASE_URL = 'https://api.themoviedb.org/3';
     const API_URL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     const IMG_URL = 'https://image.tmdb.org/t/p/w500';
-    const searchURL = BASE_URL + '/search/movie?' + API_KEY;
+    const searchURL = BASE_URL + '/discover/movie?sort_by=popularity.desc&' + API_KEY;
     const main = document.getElementById('main');
     const form = document.getElementById('form');
     const search = document.getElementById('search');
